# ServiceManager

./: .gitignore  CMakeLists.txt  README.txt  ServiceManagementDll.cpp  main.cpp
ServiceManagement/: Service.h  ServiceConfig.cpp  ServiceConfig.h  ServiceConstants.h  ServiceManager.cpp  ServiceManager.h  ServiceResult.h
ServiceManagerCOMClient/: CMakeLists.txt  ServiceManagerCOMClient.cpp
ServiceManagerCOMClient/includes/controller/: ServiceTableController.h
ServiceManagerCOMClient/includes/model/: ServiceConstantConverter.h  ServiceInfo.h  ServiceTableModel.h
ServiceManagerCOMClient/includes/model/com/: ServiceManager.h
ServiceManagerCOMClient/includes/view/: MainView.h  ServiceConstantConverter.h  ServiceTableItemFactory.h  ServiceTableView.h
ServiceManagerCOMClient/src/controller/: ServiceController.cpp
ServiceManagerCOMClient/src/model/: ServiceConstantConverter.cpp  ServiceTableModel.cpp
ServiceManagerCOMClient/src/model/com/: ServiceManager.cpp
ServiceManagerCOMClient/src/view/: MainView.cpp  ServiceConstantConverter.cpp  ServiceTableItemFactory.cpp  ServiceTableView.cpp
ServiceManagerCOMObject/: CMakeLists.txt  ServiceManagement.rc  ServiceManagementDll.cpp  ServiceManagementDll.def  main.cpp
ServiceManagerCOMObject/includes/ServiceManagement/: Service.h  ServiceConfig.h  ServiceConstants.h  ServiceManager.h
ServiceManagerCOMObject/includes/com/: IServiceManager.idl  ServiceConstantConverter.h  ServiceInfoConverter.h  ServiceManagerObj.h  ServiceManagerObjFactory.h
ServiceManagerCOMObject/includes/util/: Util.h
ServiceManagerCOMObject/src/ServiceManagement/: CMakeLists.txt  ServiceManager.cpp
ServiceManagerCOMObject/src/com/: CMakeLists.txt  ServiceConstantConverter.cpp  ServiceInfoConverter.cpp  ServiceManagerObj.cpp
ServiceManagerCOMObject/src/util/: util.cpp
com/: ServiceManagerObj.cpp  ServiceManagerObj.h  ServiceManagerObjFactory.h
includes/ServiceManagement/: Service.h  ServiceConfig.h  ServiceManager.h
includes/com/: IServiceManager.idl  ServiceManagerObj.h
src/ServiceManagement/: CMakeLists.txt  ServiceConfig.cpp  ServiceManager.cpp
src/com/: IServiceManager.idl  ServiceManagerObj.cpp  ServiceManagerObjFactory.cpp
